Updating cover-image

--- a/data/en/bots/454334584327372802.md
+++ b/data/en/bots/454334584327372802.md
@@ -10,7 +10,7 @@ github:
 prefix: 't_'
 support: 'https://discord.gg/W79Pbaw'
 nsfw: false
-cover: 'https://i.imgur.com/DxgdGE2.png'
+cover: 'https://i.imgur.com/hrvSbhI.png'
 ---
 # Supporto
 Supporto is a simple Ticket-bot, with a small twist.  
